--- a/Speart/manuales/Manual de usuario.html
+++ b/Speart/manuales/Manual de usuario.html
@@ -8,6 +8,10 @@
 
 
 
+
+
+  
+  
   
   
   
@@ -18,6 +22,10 @@
 
 
 
+
+
+  
+  
   
   
   
@@ -32,13 +40,19 @@
 
 
 
-<div style="text-align: center;"><img style="width: 687px; height: 319px;" alt="" src="ima/inicio.jpg"><br>
+
+
+<div style="text-align: center;"><img style="width: 687px; height: 319px;" alt="" src="imagens/inicio.jpg"><br>
+
+
 
 
 
 
 
 </div>
+
+
 
 
 
@@ -50,7 +64,11 @@
 
 
 
+
+
 </div>
+
+
 
 
 
@@ -62,11 +80,16 @@
 
 
 
+
+
 </span>
-<div style="text-align: center;">
-<div style="text-align: right;"><span style="font-family: Maiandra GD;">En
+<br>
+
+<div style="text-align: center;"><span style="font-family: Maiandra GD;">En
 la actualidad, dada la diversidad de&nbsp; funciones y alternativas en
 el campo laboral, el&nbsp; proceso de selecci&oacute;n de personal </span><br style="font-family: Maiandra GD;">
+
+
 
 
 
@@ -80,13 +103,19 @@ organizaci&oacute;n depende en gran medida de la calidad de sus</span><br style=
 
 
 
+
+
 <span style="font-family: Maiandra GD;">&nbsp;recursos humanos en pos&nbsp; de alcanzar un desarrollo reglado por la eficacia y la eficiencia.</span><br>
 
 
 
 
 
+
+
 <span style="font-family: Maiandra GD;"></span><br>
+
+
 
 
 
@@ -100,7 +129,11 @@ trav&eacute;s de unas actividades concretas, </span><br>
 
 
 
+
+
 <span style="font-family: Maiandra GD;">los recursos y los medios suelen estar limitados, son escasos. Esto obliga a racionalizar el proceso de toma de decisiones.</span><br>
+
+
 
 
 
@@ -114,7 +147,11 @@ racionalidad estamos "planificando".</span><br>
 
 
 
+
+
 <span style="font-family: Maiandra GD;"></span><br>
+
+
 
 
 
@@ -128,9 +165,13 @@ selecci&oacute;n de personal, para, a la hora de evaluar las </span><br>
 
 
 
+
+
 <span style="font-family: Maiandra GD;">aptitudes de cada individuo,
 poder tomar una decisi&oacute;n adecuada sobre el mismo en
 relaci&oacute;n con las actividades que desempe&ntilde;ar&aacute; </span><br>
+
+
 
 
 
@@ -142,7 +183,11 @@ relaci&oacute;n con las actividades que desempe&ntilde;ar&aacute; </span><br>
 
 
 
+
+
 <span style="font-family: Maiandra GD;"></span><br>
+
+
 
 
 
@@ -156,9 +201,13 @@ Planificaci&oacute;n, y Verificaci&oacute;n de Evaluaciones</span><br>
 
 
 
+
+
 <span style="font-family: Maiandra GD;">&nbsp;que genere
 automaticamente las actividades a los servidores del Dpto de Riesgfos
 del Trabajo del IESS de Loja con la finalidad de</span><br>
+
+
 
 
 
@@ -170,346 +219,47 @@ del Trabajo del IESS de Loja con la finalidad de</span><br>
 
 
 
+
+
+
+
+
+
+
+
+
+<span style="font-family: Maiandra GD;"></span><br>
 </div>
+<div style="text-align: left;">
+<div style="text-align: center;">
 
 
 
 
 
+
+<span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span><br>
+</div>
+<span style="font-family: Maiandra GD;">
+
+
+
+
+
+
+</span><br>
 <span style="font-family: Maiandra GD;"></span></div>
+<span style="font-family: Maiandra GD;">
 
-
-
-
-
-<span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
 
 
 
 
 
 <br>
+</span> </div>
 
 
-
-
-
-<br>
-Constar&aacute; de las siguientes funciones:<br>
-</span>
-<table style="text-align: left; width: 980px; height: 497px;" border="1" cellpadding="2" cellspacing="2">
-  <tbody>
-    <tr>
-      <td>
-      <div style="text-align: center;"><span style="font-family: Maiandra GD;"><span style="font-weight: bold;"> <span style="text-decoration: underline;">Modulo Usuarios </span></span></span><br>
-      <span style="font-family: Maiandra GD;"><span style="font-weight: bold;"></span></span></div>
-      <span style="font-family: Maiandra GD;"><span style="font-weight: bold;">
-
-
-
-
-      <br>
-
-
-
-
-
-      </span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a href="Agregar%20usuario.html">&nbsp;Agregar Usuarios </a><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a href="Modificar%20usuarios.html">Modificar Usuarios</a> <br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <a href="deshabilitar%20usuario.html">&nbsp;Deshabilitar usuarios </a><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a href="agregarconocimientos.html">Agregar Conocimientos</a> <br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a href="agregardestreza.html">Agregar Destrezas</a>&nbsp;&nbsp;  <br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a href="agregarquejas.html">Agregar Quejas</a><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
-
-
-
-
-
-      <br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<span style="font-weight: bold;"> &nbsp;</span><span style="font-weight: bold;"> <span style="text-decoration: underline;">Modulo Procesos</span></span> <br>
-
-
-
-
-
-      <br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <a href="ingresarproceso.html">Nuevo Proceso</a><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <a href="editarproceso.html">Editar proceso</a><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <a href="editaractividad.html">Editar Actividad</a><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="eliminaractividad.html">Eliminar Actividad </a><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <a href="buscaractividad.html">Buscar Actividad</a></span></td>
-      <td><span style="font-family: Maiandra GD;"><span style="font-weight: bold;"><span style="text-decoration: underline;">Modulo Agenda</span></span></span><span style="text-decoration: underline;"> </span>&nbsp; &nbsp;&nbsp;&nbsp; <br>
-
-
-
-
-
-      <br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<span style="font-family: Maiandra GD;">&nbsp; &nbsp;Agregar Actividad &nbsp; </span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;Editar Actividad</span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;Eliminar Actividad</span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Agregar feriado</span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Eliminar Feriado </span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Generar Automaticamente</span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Obtener Informe de Actividades Terminadas<br>
-      <br>
-      </span> <span style="text-decoration: underline; font-weight: bold;">Modulo Operaciones<br>
-
-
-
-
-
-      </span><span style="font-weight: bold;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;</span> &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span style="font-family: Maiandra GD;">&nbsp; <a href="nueva%20seccion.html">Agregar nueva seccion</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;</span><span style="font-family: Maiandra GD;">&nbsp;<a href="editar%20seccion.html">Editar secci&oacute;n</a> </span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a href="eliminar%20pregunta.html">Eliminar Pregunta</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a href="nuevacomptecnica.html">Nueva Competencia Tecnica</a> </span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a href="editar%20competencia%20tecnica.html">Editar Competencia Tecnica</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a href="eliminarcomptecnica.html">Eliminar Competencia Tecnica</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a href="nuevacompuni.html">Nueva Competencia Universal</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a href="editarcompuniv.html">Editar competencia &nbsp;Universal</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a href="eliminarcompuniv.html">Eliminar Competencia Universal</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <a href="nuevotrabajo.html">Nuevo Trabajo en Equipo</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<a href="editartrabajo.html">Editar Trabajo en Equipo</a></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-      <span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a href="eliminartrabajo.html">Eliminar Trabajo en Equipo</a></span><br>
-      <span style="font-family: Maiandra GD;"><br>
-      <br>
-      <br>
-      <br>
-      <br>
-      </span></td>
-    </tr>
-  </tbody>
-</table>
-<span style="font-family: Maiandra GD;"><br>
-
-
-
-
-
-<br style="font-weight: bold;">
-
-
-
-
-
-<span style="font-weight: bold;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</span><a href="agregarquejas.html"></a><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
-
-
-
-
-
-<a href="buscaractividad.html"><br>
-
-
-</a>
-
-
-<br>
-
-
-
-
-
-</span><span style="font-family: Maiandra GD;"><span style="font-weight: bold;"></span><span style="font-weight: bold;"> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;</span></span><span style="font-family: Maiandra GD;"></span><br style="font-family: Maiandra GD;">
-
-
-
-
-
-<span style="font-family: Maiandra GD;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span><br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<span style="font-family: Maiandra GD;"><a href="eliminartrabajo.html"></a></span><br>
-
-
-
-
-
-<br>
-
-
-
-
-
- <br>
-
-
-
-
-
-<br>
-
-
-
-
-
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </div>
 
 
 
