--- a/Speart/src/ayuda/manuales/deshabilitar usuario.html
+++ b/Speart/src/ayuda/manuales/deshabilitar usuario.html
@@ -11,13 +11,13 @@
       <td><img style="width: 860px; height: 324px;" alt="" src="file:///D:/Documents/tesis/manuales/ima/Deshabilitar%20usuarios.jpg"></td>
       <td>
 
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Para Deshabilitar un
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Para Deshabilitar un
 usuario <span style="">&nbsp;</span>se debe haber ingresado
 previamente al sistema como Administrador Despu&eacute;s ir al m&oacute;dulo Usuarios situado
 en la parte superior izquierda, luego hacer clic en el &iacute;tem Lista usuarios.<o:p></o:p></span></p>
 
 
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Seleccionar de la
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Seleccionar de la
 tabla, el usuario a deshabilitar y presionar el bot&oacute;n Deshabilitar, el sistema
 mostrara<span style="">&nbsp; </span>un mensaje indicando lo
 siguiente <o:p></o:p></span></p>
@@ -34,12 +34,12 @@ siguiente <o:p></o:p></span></p>
       <td><img style="width: 682px; height: 532px;" alt="" src="imagens/desahilitar2.jpg"></td>
       <td>
 
-      <p class="MsoNormal"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Para agregar las actividades a otro usuario debe
+      <p class="MsoNormal"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Para agregar las actividades a otro usuario debe
 presionar en &ldquo;SI&rdquo; el sistema le mostrara un msj &ldquo;Escoja el servidor al que
 desea pasar las actividades&rdquo;.<o:p></o:p></span></p>
 
 
-      <p class="MsoNormal"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Una vez seleccionado se mostrar&aacute; si &ldquo;Desea
+      <p class="MsoNormal"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Una vez seleccionado se mostrar&aacute; si &ldquo;Desea
 deshabilitar el usuario&rdquo;, presionar SI finalmente &ldquo;Se ha deshabilitado el
 usuario&rdquo;<span style="">&nbsp; </span><o:p></o:p></span></p>
 
