--- a/Speart/src/ayuda/manuales/editar competencia tecnica.html
+++ b/Speart/src/ayuda/manuales/editar competencia tecnica.html
@@ -30,17 +30,17 @@
 </table>
 <br>
 <br>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para editar las Competencias Tecnicas ir
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para editar las Competencias Tecnicas ir
 al m&oacute;dulo Operaciones que est&aacute; en la parte izquierda de la pantalla&nbsp;</span></p>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Luego
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Luego
 presionar el &iacute;tem &nbsp;Competencias Tecnicas de Puesto</span></p>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Seleccionar de la tabla, la destreza que desea editar &nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Seleccionar de la tabla, la destreza que desea editar &nbsp;</span></p>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Dar<span style="">&nbsp; </span>clicK&nbsp; en el<span style="">&nbsp; </span>bot&oacute;n Editar&nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. Dar<span style="">&nbsp; </span>clicK&nbsp; en el<span style="">&nbsp; </span>bot&oacute;n Editar&nbsp;</span></p>
 
-<span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. Modificar los datos que &nbsp;desea actualizar y presionar boton &nbsp;Modificar <br>
+<span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">5. Modificar los datos que &nbsp;desea actualizar y presionar boton &nbsp;Modificar <br>
 </span><span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="font-family: Verdana;"></span></span></span>
 </body>
 </html>
