--- a/Speart/src/ayuda/manuales/editaractividad.html
+++ b/Speart/src/ayuda/manuales/editaractividad.html
@@ -40,8 +40,8 @@ la parte izquierda de la pantalla &nbsp;y haber seleccionado el item Lista Proce
 1. Seleccionar el proceso del cual desea editar su actividad correspondiente <br>
 
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Seleccionar de <span style="">&nbsp;</span>la tabla la, actividad que desea editar</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Presionar el bot&oacute;n Editar, el sistema cargara una ventana en la que se mostraran
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Seleccionar de <span style="">&nbsp;</span>la tabla la, actividad que desea editar</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Presionar el bot&oacute;n Editar, el sistema cargara una ventana en la que se mostraran
 la informaci&oacute;n de dicha actividad,</span></p>
 <table style="text-align: left; width: 100px;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
@@ -50,14 +50,14 @@ la informaci&oacute;n de dicha actividad,</span></p>
     </tr>
   </tbody>
 </table>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"></span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Editar la informaci&oacute;n que desee<span style="">&nbsp; </span>y,</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. Presionar bot&oacute;n Modificar.</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">6.
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. Editar la informaci&oacute;n que desee<span style="">&nbsp; </span>y,</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">5. Presionar bot&oacute;n Modificar.</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">6.
 El sistema&nbsp;presentara un mensaje de confirmaci&oacute;n de si el
 usuario desea o no modificara la informaci&oacute;n&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"></span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family:Maiandra GD,sans-serif"></span></p>
 </div>
 
 <span style="font-style: italic; color: rgb(0, 153, 0);"> </span>
