--- a/Speart/src/ayuda/manuales/editartrabajo.html
+++ b/Speart/src/ayuda/manuales/editartrabajo.html
@@ -19,15 +19,15 @@
 <br>
 </span></span></span>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para editar una
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para editar una
 destreza de Trabajo en equipo ir<span style="">&nbsp; </span>al
 m&oacute;dulo Operaciones que est&aacute; en la parte izquierda de la pantalla</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Presionar en
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Presionar en
 el &iacute;tem <b style="">Trabajo en Equipo</b>&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Luego
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Luego
 seleccionar la destreza a modificar<span style="">&nbsp;&nbsp;</span></span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"><span style=""></span>4. Presionar bot&oacute;n editar,&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. Actualizar la informaci&oacute;n de la destreza<span style="">&nbsp; </span>posteriormente cliquear el en bot&oacute;n Modificar
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"><span style=""></span>4. Presionar bot&oacute;n editar,&nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family:Maiandra GD,sans-serif">5. Actualizar la informaci&oacute;n de la destreza<span style="">&nbsp; </span>posteriormente cliquear el en bot&oacute;n Modificar
 para actualizar<span style="">&nbsp; </span>la informaci&oacute;n
 que<span style="">&nbsp; </span>se ha ingresado <o:p></o:p></span></p>
 
