--- a/Speart/src/ayuda/manuales/eliminar pregunta.html
+++ b/Speart/src/ayuda/manuales/eliminar pregunta.html
@@ -17,7 +17,7 @@ ELIMINAR PREGUNTA<br>
 </table>
 <span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="font-family: Verdana;"><br>
 <br>
-</span></span></span><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Para eliminar una pregunta de una secci&oacute;n ir al m&oacute;dulo
+</span></span></span><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Para eliminar una pregunta de una secci&oacute;n ir al m&oacute;dulo
 Operaciones que est&aacute; en la parte izquierda de la pantalla <br>
 luego presionar el
 &iacute;tem Lista <br>
