--- a/Speart/src/ayuda/manuales/ingresarproceso.html
+++ b/Speart/src/ayuda/manuales/ingresarproceso.html
@@ -15,20 +15,20 @@
     <tr>
       <td>
 
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para ingresar un nuevo
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para ingresar un nuevo
 proceso con su respectiva actividad primeramente<span style="">&nbsp; </span>debe haber ingresado al sistema como administrador
 luego presionar en el m&oacute;dulo<b style=""> </b>Procesos
 que est&aacute; ubicado en la parte izquierda de la pantalla principal. <o:p></o:p></span></p>
 
 
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Hacer clic en el bot&oacute;n
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Hacer clic en el bot&oacute;n
 Nuevo<span style="">&nbsp;</span></span></p>
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"><span style="">3. </span>Se mostrara una ventana en el que
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"><span style="">3. </span>Se mostrara una ventana en el que
 deber&aacute; llenar<span style="">&nbsp; </span>el nombre del proceso,
 presionar aceptar</span></p>
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. A continuaci&oacute;n llenamos los campos de actividad para
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. A continuaci&oacute;n llenamos los campos de actividad para
 agregarla al nuevo proceso creado</span></p>
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. Se finalizara guardando la informaci&oacute;n en la
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">5. Se finalizara guardando la informaci&oacute;n en la
 base de datos.<o:p></o:p></span></p>
 
       </td>
