--- a/Speart/src/ayuda/manuales/nuevacomptecnica.html
+++ b/Speart/src/ayuda/manuales/nuevacomptecnica.html
@@ -20,14 +20,14 @@
 <br>
 </span></span></span>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Para ingresar una
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Para ingresar una
 nueva Competencia T&eacute;cnica ir <span style="">&nbsp;</span>al m&oacute;dulo
 Operaciones que est&aacute; en la parte izquierda de la pantalla</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Ir al item Competencias Tecnicas de&nbsp;Puesto</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"> luego presionar el
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Ir al item Competencias Tecnicas de&nbsp;Puesto</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"> luego presionar el
 bot&oacute;n Nuevo,&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">ingresar la informaci&oacute;n de la destreza <span style=""></span></span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"><span style="">&nbsp;</span>posteriormente guardar la informaci&oacute;n que<span style="">&nbsp; </span>se ha ingresado <o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">ingresar la informaci&oacute;n de la destreza <span style=""></span></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"><span style="">&nbsp;</span>posteriormente guardar la informaci&oacute;n que<span style="">&nbsp; </span>se ha ingresado <o:p></o:p></span></p>
 
 </body>
 </html>
