--- a/Speart/src/ayuda/manuales/nuevotrabajo.html
+++ b/Speart/src/ayuda/manuales/nuevotrabajo.html
@@ -16,7 +16,7 @@
   </tbody>
 </table>
 <span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="font-family: Verdana;"><br>
-</span></span></span><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para ingresar una
+</span></span></span><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para ingresar una
 nueva destreza de Trabajo en equipo ir<span style="">&nbsp;
 </span>al m&oacute;dulo Operaciones que est&aacute; en la parte izquierda de la pantalla<br>
 <br>
