--- a/Speart/src/ayuda/manuales/buscaractividad.html
+++ b/Speart/src/ayuda/manuales/buscaractividad.html
@@ -18,18 +18,18 @@
 <br>
 
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Para buscar <span style="">&nbsp; </span>la actividad, previamente debio presionar en el m&oacute;dulo<b style=""> </b>Procesos que est&aacute; ubicado en la parte
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Para buscar <span style="">&nbsp; </span>la actividad, previamente debio presionar en el m&oacute;dulo<b style=""> </b>Procesos que est&aacute; ubicado en la parte
 izquierda de la pantalla&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">principal. Ir al &iacute;tem<span style="">&nbsp;
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">principal. Ir al &iacute;tem<span style="">&nbsp;
 </span>Lista Procesos</span></p>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Seleccionar el proceso del cual se va a buscar&nbsp; la
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Seleccionar el proceso del cual se va a buscar&nbsp; la
 actividad,&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2.En la barra inferior se ubicara la actividad que desea buscar&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"><o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2.En la barra inferior se ubicara la actividad que desea buscar&nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"><o:p></o:p></span></p>
 
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"><o:p>&nbsp;</o:p></span></p>
 
 <br>
 <span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="font-family: Verdana;"></span></span></span></div>
