--- a/Speart/src/ayuda/manuales/editar seccion.html
+++ b/Speart/src/ayuda/manuales/editar seccion.html
@@ -21,13 +21,13 @@ EDITAR&nbsp; SECCI&Oacute;N<br>
 <br>
 </span></span></span>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para editar secci&oacute;n ir
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para editar secci&oacute;n ir
 al m&oacute;dulo Operaciones que est&aacute; en la parte izquierda de la pantalla&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Luego
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Luego
 presionar el &iacute;tem Lista Procesos&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. seleccionar la secci&oacute;n que desea editar,&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Dar<span style="">&nbsp; </span>clicK&nbsp; en el<span style="">&nbsp; </span>bot&oacute;n Editar Secci&oacute;n</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. Ingresar la nueva
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. seleccionar la secci&oacute;n que desea editar,&nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. Dar<span style="">&nbsp; </span>clicK&nbsp; en el<span style="">&nbsp; </span>bot&oacute;n Editar Secci&oacute;n</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">5. Ingresar la nueva
 secci&oacute;n presionar Aceptar<o:p></o:p></span></p>
 
 <br>
