--- a/Speart/src/ayuda/manuales/editarcompuniv.html
+++ b/Speart/src/ayuda/manuales/editarcompuniv.html
@@ -18,11 +18,11 @@
 <span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="font-family: Verdana;"><br>
 </span></span></span>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para editar una<span style="">&nbsp; </span>Competencia Universal ir<span style="">&nbsp; </span>al m&oacute;dulo Operaciones que est&aacute; en la parte
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para editar una<span style="">&nbsp; </span>Competencia Universal ir<span style="">&nbsp; </span>al m&oacute;dulo Operaciones que est&aacute; en la parte
 izquierda de la pantalla</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Luego seleccionar la destreza a modificar<span style="">&nbsp;</span></span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"><span style=""> </span>3. Presionar bot&oacute;n editar</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Actualizar la
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Luego seleccionar la destreza a modificar<span style="">&nbsp;</span></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"><span style=""> </span>3. Presionar bot&oacute;n editar</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. Actualizar la
 informaci&oacute;n de la destreza<span style="">&nbsp; </span>posteriormente
 cliquear el en bot&oacute;n Modificar para actualizar <span style="">&nbsp;</span><span style=""></span>la
 informaci&oacute;n que<span style="">&nbsp; </span>se ha ingresado <o:p></o:p></span></p>
