--- a/Speart/src/ayuda/manuales/editarproceso.html
+++ b/Speart/src/ayuda/manuales/editarproceso.html
@@ -15,14 +15,14 @@
     <tr>
       <td>
 
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. &nbsp;Para editar un proceso&nbsp;presionar en el m&oacute;dulo<b style=""> </b>Procesos que est&aacute; ubicado en la parte
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. &nbsp;Para editar un proceso&nbsp;presionar en el m&oacute;dulo<b style=""> </b>Procesos que est&aacute; ubicado en la parte
 izquierda de la pantalla principal.&nbsp;</span></p>
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Ir al &iacute;tem<span style="">&nbsp;
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Ir al &iacute;tem<span style="">&nbsp;
       </span>Lista Procesos</span></p>
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Seleccionar el proceso que se va a editar o cambiar</span></p>
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Presionar en el bot&oacute;n Editar Proceso, el sistema mostrara una ventana en la que
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Seleccionar el proceso que se va a editar o cambiar</span></p>
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. Presionar en el bot&oacute;n Editar Proceso, el sistema mostrara una ventana en la que
 se ingresara el nuevo nombre del proceso&nbsp;</span></p>
-      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. Dar click en el
+      <p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">5. Dar click en el
 bot&oacute;n Aceptar <o:p></o:p></span></p>
 
       </td>
