--- a/Speart/src/ayuda/manuales/eliminaractividad.html
+++ b/Speart/src/ayuda/manuales/eliminaractividad.html
@@ -19,20 +19,20 @@
 </table>
 <span style="font-style: italic; color: rgb(0, 153, 0);"><span style="font-weight: bold;"><br>
 </span></span><br>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">Para eliminar<span style="">&nbsp; </span>la actividad previamente debe haber ingresado al m&oacute;dulo<b style=""> </b>Procesos que est&aacute; ubicado en la parte
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">Para eliminar<span style="">&nbsp; </span>la actividad previamente debe haber ingresado al m&oacute;dulo<b style=""> </b>Procesos que est&aacute; ubicado en la parte
 izquierda de la pantalla principal. Ir al &iacute;tem<span style="">&nbsp;
 </span>Lista Procesos , se realizara los siguientes pasos &nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Seleccionar el proceso del cual se va a eliminar la
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Seleccionar el proceso del cual se va a eliminar la
 actividad</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Seleccionar de<span style="">&nbsp; </span>la tabla la
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Seleccionar de<span style="">&nbsp; </span>la tabla la
 actividad que desea eliminar</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Presionar el bot&oacute;n Eliminar</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. El sistema mostrara
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Presionar el bot&oacute;n Eliminar</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. El sistema mostrara
 un mensaje si &ldquo;Desea eliminar la actividad seleccionada&rdquo; presionar si y
 autom&aacute;ticamente el<span style="">&nbsp; </span>sistema la eliminara.<o:p></o:p></span></p>
 
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"><o:p>&nbsp;</o:p></span></p>
 
 </body>
 </html>
