--- a/Speart/src/ayuda/manuales/eliminarcompuniv.html
+++ b/Speart/src/ayuda/manuales/eliminarcompuniv.html
@@ -19,16 +19,16 @@
 <br>
 </span></span></span>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para eliminar una<span style="">&nbsp; </span>Competencia Universal ir<span style="">&nbsp; </span>al m&oacute;dulo Operaciones que est&aacute; en la parte
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para eliminar una<span style="">&nbsp; </span>Competencia Universal ir<span style="">&nbsp; </span>al m&oacute;dulo Operaciones que est&aacute; en la parte
 izquierda de la pantalla</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Elegir el item &nbsp;Competencia Universal </span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Luego seleccionar la destreza a eliminar&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Presionar
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Elegir el item &nbsp;Competencia Universal </span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Luego seleccionar la destreza a eliminar&nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. Presionar
 bot&oacute;n eliminar</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. El sistema solicitar&aacute; la confirmaci&oacute;n si el usuario desea o no <span style="">&nbsp;</span>eliminar la informaci&oacute;n seleccionada <o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">5. El sistema solicitar&aacute; la confirmaci&oacute;n si el usuario desea o no <span style="">&nbsp;</span>eliminar la informaci&oacute;n seleccionada <o:p></o:p></span></p>
 
 
-<p class="MsoNormal" style="margin-left: 35.4pt; text-align: justify; text-indent: -35.4pt;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
+<p class="MsoNormal" style="margin-left: 35.4pt; text-align: justify; text-indent: -35.4pt;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif"><o:p>&nbsp;</o:p></span></p>
 
 </body>
 </html>
