--- a/Speart/src/ayuda/manuales/eliminartrabajo.html
+++ b/Speart/src/ayuda/manuales/eliminartrabajo.html
@@ -18,12 +18,12 @@
 <span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="font-family: Verdana;"><br>
 </span></span></span>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para eliminar<span style="">&nbsp; </span>una destreza de Trabajo en equipo ir<span style="">&nbsp; </span>al m&oacute;dulo Operaciones que est&aacute; en la parte
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para eliminar<span style="">&nbsp; </span>una destreza de Trabajo en equipo ir<span style="">&nbsp; </span>al m&oacute;dulo Operaciones que est&aacute; en la parte
 izquierda de la pantalla</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Presionar en el &iacute;tem <b style="">Trabajo en Equipo</b>&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Luego seleccionar la destreza a eliminar&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Presionar bot&oacute;n eliminar,&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. El sistema solicitar&aacute; la confirmaci&oacute;n si el usuario
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Presionar en el &iacute;tem <b style="">Trabajo en Equipo</b>&nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Luego seleccionar la destreza a eliminar&nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family:Maiandra GD,sans-serif">4. Presionar bot&oacute;n eliminar,&nbsp;</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">5. El sistema solicitar&aacute; la confirmaci&oacute;n si el usuario
 desea o no<span style="">&nbsp; </span>eliminar la informaci&oacute;n
 seleccionada <o:p></o:p></span></p>
 
