--- a/Speart/src/ayuda/manuales/nueva seccion.html
+++ b/Speart/src/ayuda/manuales/nueva seccion.html
@@ -18,17 +18,17 @@
 <span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="font-family: Verdana;"><br>
 </span></span></span>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para ingresar una nueva
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para ingresar una nueva
 secci&oacute;n ir al m&oacute;dulo Operaciones <span style="">&nbsp;</span>que
 est&aacute; en la parte izquierda de la pantalla&nbsp;</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Luego presionar el bot&oacute;n Nueva Pregunta</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Ingresar la nueva secci&oacute;n,</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Presionar Aceptar</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">5. Seguidamente<span style="">&nbsp; </span>ingresar la/s preguntas,</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">6 . Seleccionra&nbsp;el numero de respuestas que&nbsp; tendra la/s pregunta
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Luego presionar el bot&oacute;n Nueva Pregunta</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Ingresar la nueva secci&oacute;n,</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. Presionar Aceptar</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">5. Seguidamente<span style="">&nbsp; </span>ingresar la/s preguntas,</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">6 . Seleccionra&nbsp;el numero de respuestas que&nbsp; tendra la/s pregunta
 para la nueva secci&oacute;n creada</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">7. Llenar las respuestas que corresponderan a la pregunta/s</span></p>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">8.&nbsp; Posteriormente guardar la informaci&oacute;n que<span style="">&nbsp; </span>se ha ingresado <o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">7. Llenar las respuestas que corresponderan a la pregunta/s</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">8.&nbsp; Posteriormente guardar la informaci&oacute;n que<span style="">&nbsp; </span>se ha ingresado <o:p></o:p></span></p>
 
 </body>
 </html>
