--- a/Speart/src/ayuda/manuales/nuevacompuni.html
+++ b/Speart/src/ayuda/manuales/nuevacompuni.html
@@ -18,15 +18,15 @@
 <span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="font-family: Verdana;"><br>
 <br>
 </span></span></span>
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">1. Para ingresar&nbsp; las Competencias&nbsp; Universales ir
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">1. Para ingresar&nbsp; las Competencias&nbsp; Universales ir
 al m&oacute;dulo Operaciones que est&aacute; en la parte izquierda de la pantalla&nbsp;</span></p>
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">2. Luego
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">2. Luego
 presionar el &iacute;tem &nbsp;Competencias Universales</span></p>
 
 
-<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">3. Dar<span style="">&nbsp; </span>clicK&nbsp; en el<span style="">&nbsp; </span>bot&oacute;n Nuevo</span></p>
+<p class="MsoNormal" style="text-align: justify;"><span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">3. Dar<span style="">&nbsp; </span>clicK&nbsp; en el<span style="">&nbsp; </span>bot&oacute;n Nuevo</span></p>
 
-<span style="font-size: 12pt; line-height: 115%; font-family: &quot;Maiandra GD&quot;,&quot;sans-serif&quot;;">4. Llenar la informaci&oacute;n en los campos mostrados &nbsp;y Guardar los datos&nbsp; ingresados</span>
+<span style="font-size: 12pt; line-height: 115%; font-family: Maiandra GD,sans-serif">4. Llenar la informaci&oacute;n en los campos mostrados &nbsp;y Guardar los datos&nbsp; ingresados</span>
 </body>
 </html>
